--- a/style.scss
+++ b/style.scss
@@ -44,6 +44,25 @@
   background-repeat: no-repeat;
 }
 
+.gradient-overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50%; /* Hauteur du dégradé */
+  background: linear-gradient(to bottom, transparent, rgba(139, 69, 19, 0.7)); /* Dégradé descendant */
+}
+
+
+.card:hover .bg-gradient {
+  height: 50%; /* Hauteur maximale de l'effet de survol lors du survol */
+}
+
+.card:hover .bg-gradient {
+  height: 100%; /* Hauteur maximale de l'effet de survol lors du survol */
+}
+
+
 //card from arrivals
 .card-arrivals{
   width: 250px;
